--- a/src/app/coc/coc.component.html
+++ b/src/app/coc/coc.component.html
@@ -11,6 +11,9 @@
           <span style=" display: contents;">{{myClan.name}}</span>
           <img src="{{myClan.badgeUrls.medium}}" style="height:100%;">
         </div>
+        <div class="clanTag">
+          {{myClan.tag}}
+        </div>
         <div style="margin: auto auto;  width: fit-content;">
           <small> <span style="color: red; font-weight: 900;" class="glow">{{myClan.warWins}}</span> Wars Won | </small>
           <small><span style="color: rgb(255, 221, 0); font-weight: 900;">Level {{myClan.clanCapital.capitalHallLevel}}
@@ -150,12 +153,18 @@
           </div>
         </div>
       </div>
+      <!-- Get your own! -->
+      <div class="row youtubeLink">
+        <a target="_blank" href="https://youtu.be/iDRnE4azPYo"><p>Get this for your Clan!</p></a>
+      </div>
       <!-- Disclamer -->
       <div class="row">
         <p style="color:rgb(74, 74, 74)">This content is not affiliated with, endorsed, sponsored, or specifically
           approved by Supercell and Supercell is not responsible for it. For more information see Supercell’s Fan
-          Content Policy: <a style="color: #828282;" href="https://www.supercell.com/fan-content-policy" target="_blank">www.supercell.com/fan-content-policy</a></p>
+          Content Policy: <a style="color: #828282; text-decoration: none;" href="https://www.supercell.com/fan-content-policy" target="_blank">www.supercell.com/fan-content-policy</a></p>
       </div>
 
+   
     </div>
   </div>
+
